# AI_FileMove

./: .gitignore  AGENTS.md
gemma4-win32/: CMakeLists.txt
gemma4-win32/docs/: BUILDING.md  PROGRESS.md  TESTING.md  USER_GUIDE.md
gemma4-win32/include/: about_window.hpp  filemove.hpp  group_dialog.hpp  logger.hpp  mainwindow.hpp  queue_window.hpp  search_dialog.hpp  settings_window.hpp  shutdown_dialog.hpp  status_window.hpp  storage_manager.hpp
gemma4-win32/specs/: FileMove-mockups-v1.1.0.md  FileMove-mockups.md  FileMove-spec-v1.1.0.md  FileMove-spec.md
gemma4-win32/src/: about_window.cpp  cli_parser.cpp  clipboard_handler.cpp  clipboard_handler.hpp  group_dialog.cpp  logger.cpp  main.cpp  mainwindow.cpp  move_worker.cpp  queue_window.cpp  search_dialog.cpp  settings_window.cpp  shutdown_dialog.cpp  status_window.cpp  storage_manager.cpp
gemma4-win32/tests/: e2e_test.sh  test_main.cpp
gemma4-win32/tests/e2e_sandbox/: config.json
